# bria

./: .gitignore  Cargo.toml  Config.example.toml  Dockerfile  README.md  SKILL.md
.githooks/: pre-commit
.github/workflows/: crates-publish.yml  docker-publish.yml  e2e.yml  lint.yml  test.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: configuration.md  getting-started.md  usage.md
docs/reference/: operations.md  responses.md
src/: cli.rs  config.rs  context.rs  error.rs  expression.rs  lib.rs  main.rs  orchestrator.rs  pipeline.rs  server.rs  sinks.rs  sources.rs  state.rs  task_runner.rs  template.rs  util.rs
tests/: integration.rs
tests/e2e/: .gitignore  Config.cron-file.toml  Config.file-file.toml  Config.file-sqlite.toml  Config.http-413.toml  Config.http-cancel.toml  Config.http-condition-false.toml  Config.http-file.toml  Config.http-nonzero.toml  Config.http-pg-recovery.toml  Config.http-pg.toml  Config.http-queue.toml  Config.http-sqlite.toml  Config.http-sse.toml  Config.http-webhook.toml  Config.pg-pg.toml  Config.queue-file.toml  Config.sqlite-file.toml  Config.webhook-pg.toml  README.md  amqp-helper.Dockerfile  amqp-helper.py  docker-compose.infra.yml  docker-compose.yml  run.sh
tests/integration/: config_and_pipeline.rs  core_config_expr_template.rs  pipeline_task_runner.rs  sinks_server.rs  sources_state_util.rs  universal_config.rs
