[package]
name = "bria"
version = "0.1.1"
edition = "2024"
rust-version = "1.96"
description = "Multi-pipeline job orchestrator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/melonask/bria"

[[bin]]
name = "bria"
path = "src/main.rs"

[lib]
name = "bria"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "process",
    "time",
    "signal",
    "io-util",
    "fs",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"

# Config
toml = "1.1.2"

# Templating
minijinja = "2.20.0"

# Expression evaluation (CEL)
cel = "0.13.0"

# HTTP server
axum = { version = "0.8.9", features = ["macros", "ws"] }
tower-http = { version = "0.6.6", features = ["auth", "cors", "fs"] }

# Database
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "postgres"] }

# AMQP
lapin = "4.10.0"

# WebAssembly runtime
wasmtime = { version = "45.0.1", features = ["runtime", "component-model", "async"] }
wasmtime-wasi = { version = "45.0.1", features = ["p1"] }

# HTTP client
reqwest = { version = "0.13.4", features = ["json"] }

# Error handling
thiserror = "2.0.12"

# Unique IDs
ulid = { version = "1.2.0", features = ["serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Cron
cron = "0.16.0"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.1"

# CSV parsing
csv = "1.3.0"

# Regex
regex = "1.11.0"

# HMAC + crypto for webhooks
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"

# Tokio streaming and SSE
tokio-stream = "0.1.17"
async-stream = "0.3.6"

# DashMap for in-memory state
dashmap = "6.1.0"

# URL parsing
url = "2.5.0"

# Retry jitter
rand = "0.10.1"

# Async trait
async-trait = "0.1.88"

# Signal handling
libc = "0.2"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"

[[test]]
name = "sinks_server"
path = "tests/integration/sinks_server.rs"
