[package]
name = "bria"
version = "0.1.3"
edition = "2024"
rust-version = "1.96"
description = "Multi-pipeline job orchestrator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/melonask/bria"

[[bin]]
name = "bria"
path = "src/main.rs"

[lib]
name = "bria"
path = "src/lib.rs"

[features]
default = []
server = ["dep:axum", "dep:tower-http", "dep:async-stream", "dep:tokio-stream", "dep:hmac", "dep:sha2", "dep:hex"]
webhook = ["dep:reqwest", "dep:hmac", "dep:sha2", "dep:hex"]
sqlite = ["dep:sqlx", "sqlx?/sqlite"]
postgres = ["dep:sqlx", "sqlx?/postgres"]
amqp = ["dep:lapin", "dep:url", "dep:tokio-stream"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
cron = ["dep:cron", "dep:chrono-tz"]
full = ["server", "webhook", "sqlite", "postgres", "amqp", "wasm", "cron"]

[dependencies]
# CLI
clap = { version = "4.6.1", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.52.3", features = [
    "rt-multi-thread",
    "sync",
    "macros",
    "process",
    "time",
    "signal",
    "io-util",
    "fs",
] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"

# Config
toml = "1.1.2"

# Templating
minijinja = "2.20.0"

# Expression evaluation (CEL)
cel = "0.13.0"

# HTTP server (optional: feature "server")
axum = { version = "0.8.9", features = ["macros", "ws"], optional = true }
tower-http = { version = "0.6.6", features = ["auth", "cors", "fs"], optional = true }

# Database (optional: features "sqlite", "postgres")
sqlx = { version = "0.9.0", features = ["runtime-tokio"], optional = true }

# AMQP (optional: feature "amqp")
lapin = { version = "4.10.0", optional = true }

# WebAssembly runtime (optional: feature "wasm")
wasmtime = { version = "45.0.1", features = ["runtime", "component-model", "async"], optional = true }
wasmtime-wasi = { version = "45.0.1", features = ["p1"], optional = true }

# HTTP client (optional: feature "webhook")
reqwest = { version = "0.13.4", features = ["json"], optional = true }

# Error handling
thiserror = "2.0.12"

# Unique IDs
ulid = { version = "1.2.0", features = ["serde"] }

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"

# Cron + timezone (optional: feature "cron")
cron = { version = "0.16.0", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = { version = "0.10.1", optional = true }

# CSV parsing
csv = "1.3.0"

# Regex
regex = "1.11.0"

# HMAC + crypto for webhooks (optional: features "server", "webhook")
hmac = { version = "0.13.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
hex = { version = "0.4.3", optional = true }

# Tokio streaming and SSE (optional: feature "server")
tokio-stream = { version = "0.1.17", optional = true }
async-stream = { version = "0.3.6", optional = true }

# DashMap for in-memory state
dashmap = "6.1.0"

# URL parsing (optional: feature "amqp")
url = { version = "2.5.0", optional = true }

# Retry jitter
rand = "0.10.1"

# Async trait
async-trait = "0.1.88"

# Signal handling
libc = "0.2"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"

[[test]]
name = "sinks_server"
path = "tests/integration/sinks_server.rs"
