[package]
name = "bria"
version = "0.1.4"
edition = "2024"
rust-version = "1.96"
description = "Multi-pipeline job orchestrator"
license = "MIT"
readme = "README.md"
repository = "https://github.com/melonask/bria"

[[bin]]
name = "bria"
path = "src/main.rs"

[lib]
name = "bria"
path = "src/lib.rs"

[features]
# SQLite is the default durable backend. Enable Postgres with --features pg.
default = ["sqlite"]
server = ["dep:axum", "dep:tower-http", "dep:async-stream", "dep:tokio-stream", "dep:hmac", "dep:sha2", "dep:hex"]
webhook = ["dep:reqwest", "dep:hmac", "dep:sha2", "dep:hex"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]
pg = ["postgres"]
amqp = ["dep:lapin", "dep:url", "dep:tokio-stream"]
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]
cron = ["dep:cron", "dep:chrono-tz"]
full = ["server", "webhook", "sqlite", "postgres", "amqp", "wasm", "cron"]

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "macros", "process", "time", "signal", "io-util", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.128"
toml = "1.1.2"
minijinja = "2.20.0"
cel = "0.13.0"
thiserror = "2.0.12"
ulid = { version = "1.2.0", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3.0"
regex = "1.11.0"
dashmap = "6.1.0"
rand = "0.10.1"
async-trait = "0.1.88"
libc = "0.2"

# Optional integrations.
axum = { version = "0.8.9", features = ["macros", "ws"], optional = true }
tower-http = { version = "0.6.6", features = ["auth", "cors", "fs"], optional = true }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio"], optional = true }
lapin = { version = "4.10.0", optional = true }
wasmtime = { version = "45.0.1", features = ["runtime", "component-model", "async"], optional = true }
wasmtime-wasi = { version = "45.0.1", features = ["p1"], optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"], optional = true }
cron = { version = "0.16.0", optional = true }
chrono-tz = { version = "0.10.1", optional = true }
hmac = { version = "0.13.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
hex = { version = "0.4.3", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
async-stream = { version = "0.3.6", optional = true }
url = { version = "2.5.0", optional = true }

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"

[[test]]
name = "sinks_server"
path = "tests/integration/sinks_server.rs"
required-features = ["server"]

[lints.rust]
unused_must_use = "deny"
# Documentation standardization target: add public API docs, then enable
# `missing_docs = "warn"` to match the strict documentation posture used by
# crates with complete public item coverage.
